Updated Index.html and pengScript.js for better readability. Fixed penguin location not being centered correctly in styles.css

--- a/styles.css
+++ b/styles.css
@@ -29,23 +29,23 @@ table {
     bottom: 4px;
     position:absolute;
 }
-.points {
-    padding-left: 4px;
-    padding-right: 4px;
-    width:12px
-}
-.warnings {
-    padding-left: 4px;
-    padding-right: 4px;
-    width:38px
-}
 .disguise{
     padding-left: 4px;
     padding-right: 4px;
     width:24px;
 }
+.points {
+    padding-left: 4px;
+    padding-right: 4px;
+    width:12px;
+}
+.warnings {
+    padding-left: 4px;
+    padding-right: 4px;
+    width:38px;
+}
 .updated{
-    width:120px;
+    width:106px;
 }
 .war, .req {
     padding-left: 5px;
@@ -62,6 +62,7 @@ table {
     background: lightblue;
     border-radius: 50%;
 }
+
 .nistable:first-child {
     background:rgba(255,255,255,0.1);
 }
